# latex-compiler

./: latex-compiler.cabal  setup-project.sh
examples/: complex.tex  math.tex
src/: Main.hs
src/Compiler/: PDF.hs  Parser.hs  Processor.hs  Types.hs
src/Utils/: Error.hs  FileHandler.hs
test/Tests/: IntegrationSpec.hs  ParserSpec.hs  ProcessorSpec.hs
