name:                latex-compiler
version:             0.1.0.0
synopsis:            A LaTeX compiler written in Haskell
description:         A tool to compile LaTeX documents to PDF using Haskell
license:             MIT
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable latex-compiler
  main-is:             Main.hs
  other-modules:       Compiler.Parser
                     , Compiler.Types
                     , Compiler.Processor
                     , Compiler.PDF
                     , Utils.FileHandler
                     , Utils.Error
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1
                     , text >= 1.2
                     , containers >= 0.6
                     , process >= 1.6
                     , directory >= 1.3
                     , filepath >= 1.4
                     , mtl >= 2.2
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat

test-suite latex-compiler-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Tests.ParserSpec
                     , Tests.ProcessorSpec
                     , Tests.IntegrationSpec
  hs-source-dirs:      test
  build-depends:       base
                     , latex-compiler
                     , hspec >= 2.7
                     , QuickCheck >= 2.14
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
